node-todo/k8s/todo-app/todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  labels:
    component: todo-app
spec:
  ingressClassName: INGRESS_CLASS_TO_REPLACE
  rules:
  - host: DNS_TO_REPLACE
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: todo-app
            port: 
              number: 8080
